[tool.poetry]
name = "rebiber"
version = "0.1.0"
description = ""
authors = ["Pedro Rodriguez <me@pedro.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.59.0"
bibtexparser = "^1.2.0"
typer = "^0.3.2"
rich = "^9.13.0"
pyfunctional = "^1.4.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
ipython = "^7.21.0"
pytest = "^6.2.2"
pylint = "^2.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
